--- a/testesresultados.tex
+++ b/testesresultados.tex
@@ -26,7 +26,7 @@ Para facilitar a execução de testes o ambiente deve permitir a captura de imagen
 	\label{fig:testes_ambiente}
 \end{figure}
 
-O sistema desenvolvido em Matlab comunica-se com a unidade programável do \emph{Mindstorms}, também chamada de \emph{brick}, através de uma conexão \emph{bluetooth}. A comunicação é unidirecional do ponto de vista do Matlab. O \emph{brick} comunica-se com um servo-motor que fornece realimentação por meio de um \emph{encoder}. Além da realimentação do \emph{encoder} foi adicionada uma malha de realimentação externa para fornecer um referencial absoluto ao sistema por meio de uma chave de fim de curso.
+O sistema desenvolvido em MATLAB comunica-se com a unidade programável do \emph{Mindstorms}, também chamada de \emph{brick}, através de uma conexão \emph{bluetooth}. A comunicação é unidirecional do ponto de vista do MATLAB. O \emph{brick} comunica-se com um servo-motor que fornece realimentação por meio de um \emph{encoder}. Além da realimentação do \emph{encoder} foi adicionada uma malha de realimentação externa para fornecer um referencial absoluto ao sistema por meio de uma chave de fim de curso.
 
 As funções implementadas dentro do \emph{brick} são as seguintes:
 
@@ -35,7 +35,7 @@ As funções implementadas dentro do \emph{brick} são as seguintes:
 \item Step: Gira o objeto no sentido anti-horário até um ângulo especificado por meio de um parâmetro. A posição do servo-motor é obtida pela realimentação do \emph{encoder}.
 \end{itemize}
 
-Para completar o ambiente de testes foi utilizado uma \emph{webcam} acessada pelo Matlab para captura de imagens e foi montado um sistema de iluminação. O sistema de iluminação foi montado ao redor da câmera de maneira a não formar sombras visíveis a partir do ponto de vista da \emph{webcam}. A montagem completa pode ser vista nas imagens da figura \ref{fig:testes_ambiente_completo}.
+Para completar o ambiente de testes foi utilizado uma \emph{webcam} acessada pelo MATLAB para captura de imagens e foi montado um sistema de iluminação. O sistema de iluminação foi montado ao redor da câmera de maneira a não formar sombras visíveis a partir do ponto de vista da \emph{webcam}. A montagem completa pode ser vista nas imagens da figura \ref{fig:testes_ambiente_completo}.
 
 \begin{figure}[H]
         \centering
