--- a/inicio.tex
+++ b/inicio.tex
@@ -49,7 +49,7 @@ outros. Muitas vezes, existem etapas da produção em indústrias metalúrgicas, nas
 %Objetivo
 O objetivo deste trabalho é desenvolver um sistema capaz de classificar objetos metálicos e medir seu respectivo ângulo de rotação com relação ao eixo x do plano cartesiano, sendo os objetos previamente conhecidos pelo sistema utilizando-se técnicas de aprendizagem de máquina. 
 % Metodologia
-O desenvolvimento do projeto é dividido em três etapas. A primeira etapa consiste no estudo de técnicas de segmentação de imagem e implementação no software Matlab. A segunda etapa consiste no estudo de técnicas de descrição de imagens e também implementação no Matlab. Finalmente, na terceira etapa é implementado no Matlab um sistema de redes neurais capazes de classificar objetos e medir seu ângulo. Para cada etapa do desenvolvimento do projeto adota-se a metodologia de desenvolvimento em espiral, onde a cada ciclo de desenvolvimento são agregadas novas funcionalidades ao sistema. Para o teste e a validação do sistema é desenvolvido um ambiente de testes, onde objetos especificamente selecionados são posicionados de forma automática, possibilitando a captura de imagens do objeto em diversas posições angulares. 
+O desenvolvimento do projeto é dividido em três etapas. A primeira etapa consiste no estudo de técnicas de segmentação de imagem e implementação no software MATLAB. A segunda etapa consiste no estudo de técnicas de descrição de imagens e também implementação no MATLAB. Finalmente, na terceira etapa é implementado no MATLAB um sistema de redes neurais capazes de classificar objetos e medir seu ângulo. Para cada etapa do desenvolvimento do projeto adota-se a metodologia de desenvolvimento em espiral, onde a cada ciclo de desenvolvimento são agregadas novas funcionalidades ao sistema. Para o teste e a validação do sistema é desenvolvido um ambiente de testes, onde objetos especificamente selecionados são posicionados de forma automática, possibilitando a captura de imagens do objeto em diversas posições angulares. 
 % Desenvolvimento
 O sistema é dividido em três módulos: segmentação, descrição e classificação dos objetos. Após a aquisição da imagem do objeto a ser classificado o módulo de segmentação seleciona a área de interesse da imagem. No módulo de descrição são extraídas características da área de interesse da imagem, formando um descritor que é fornecido ao terceiro módulo do sistema que classifica o objeto e mede a sua respectiva orientação angular. 
 % Resultados
@@ -66,8 +66,8 @@ Often, there are production stages in metallurgical industries in which the iden
 %Muitas vezes, existem etapas da produção em indústrias metalúrgicas, nas quais se necessita identificar objetos metálicos e sua respectiva orientação angular, seja para análise, separação ou mesmo somente para classificação desses objetos. 
 The objective of this work is to develop a system capable of classifying metallic objects and measure their respective angle of rotation with respect to the x axis of the Cartesian plane. The objects are previously known by the system using machine learning techniques.
 %O objetivo deste trabalho é desenvolver um sistema capaz de classificar objetos metálicos e medir seu respectivo ângulo de rotação com relação ao eixo x do plano cartesiano, sendo os objetos previamente conhecidos pelo sistema utilizando-se técnicas de aprendizagem de máquina. 
-The project development is divided into three steps. The first step is the study of techniques for image segmentation and implementation in Matlab software. The second step is the study of techniques for image description and also implementation in Matlab. Finally, in the third step a set of neural networks capable of classifying objects and measuring their angle is implemented using Matlab.
-%O desenvolvimento do projeto é dividido em três etapas. A primeira etapa consiste no estudo de técnicas de segmentação de imagem e implementação no software Matlab. A segunda etapa consiste no estudo de técnicas de descrição de imagens e também implementação no Matlab. Finalmente, na terceira etapa é implementado no Matlab um sistema de redes neurais capazes de classificar o objeto e medir seu ângulo. 
+The project development is divided into three steps. The first step is the study of techniques for image segmentation and implementation in MATLAB software. The second step is the study of techniques for image description and also implementation in MATLAB. Finally, in the third step a set of neural networks capable of classifying objects and measuring their angle is implemented using MATLAB.
+%O desenvolvimento do projeto é dividido em três etapas. A primeira etapa consiste no estudo de técnicas de segmentação de imagem e implementação no software MATLAB. A segunda etapa consiste no estudo de técnicas de descrição de imagens e também implementação no MATLAB. Finalmente, na terceira etapa é implementado no MATLAB um sistema de redes neurais capazes de classificar o objeto e medir seu ângulo. 
 For each step in the project development a spiral development methodology is adopted. In each cycle of the methodology new features are aggregated to the system. In order to test the system a test environment is developed, where specifically selected objects are placed automatically, allowing the capture of images of the object in different angular positions.
 %Para cada etapa do desenvolvimento do projeto adota-se a metodologia de desenvolvimento em espiral, onde a cada ciclo de desenvolvimento são agregadas novas funcionalidades ao sistema. Para o teste e a validação do sistema é desenvolvido um ambiente de testes, onde objetos especificamente selecionados são posicionados de forma automática, possibilitando a captura de imagens do objeto em diversas posições angulares. 
 The system is divided into three modules: segmentation, description, and classification of objects. After capturing an image of the object being classified, the segmentation module selects the region of interest from the image. In the description module features are extracted from the region of interest, forming a descriptor that is provided to the third module. The third module then classifies the object and measures its angular orientation.
@@ -79,9 +79,9 @@ Therefore, the result of this work is a system able to classify objects and meas
 
 % listas (opcionais, mas recomenda-se a partir de 5 elementos)
 \listadefiguras % geracao automatica da lista de figuras
-%\listadetabelas % geracao automatica da lista de tabelas
-%\listadesiglas % geracao automatica da lista de siglas
-%\listadesimbolos % geracao automatica da lista de simbolos
+\listadetabelas % geracao automatica da lista de tabelas
+\listadesiglas % geracao automatica da lista de siglas
+\listadesimbolos % geracao automatica da lista de simbolos
 
 % sumario
 \sumario % geracao automatica do sumario
