--- a/introducao.tex
+++ b/introducao.tex
@@ -4,7 +4,7 @@
 % Por que classificar objetos
 % Por que identificar o ângulo
 
-Técnicas de visão computacional podem ser ferramentas úteis para a automação de linhas de produção em tarefas como, por exemplo, a fabricação de componentes eletrônicos \cite{USO-COMPONENTES-ELETRONICOS}, \cite{USO-COMPONENTES-ELETRONICOS-2} a inspeção do acabamento em objetos metálicos \cite{USO-INSPECAO-SUPERFICIES}, a produção de circuitos impressos \cite{USO-INSPECAO-PCB},  \cite{USO-INSPECAO-PCB-2}, entre outros.
+Técnicas de visão computacional podem ser ferramentas úteis para a automação de linhas de produção em tarefas como, por exemplo, a fabricação de componentes eletrônicos \cite{USO-COMPONENTES-ELETRONICOS, USO-COMPONENTES-ELETRONICOS-2} a inspeção do acabamento em objetos metálicos \cite{USO-INSPECAO-SUPERFICIES}, a produção de circuitos impressos \cite{USO-INSPECAO-PCB, USO-INSPECAO-PCB-2}, entre outros.
 
 Muitas vezes, existem etapas da produção em indústrias metalúrgicas, nas quais se necessita identificar objetos metálicos e sua respectiva orientação angular, seja para análise, separação ou mesmo somente para classificação desses objetos. 
 
@@ -38,15 +38,15 @@ A grande quantidade de objetos distintos que podem estar em uma mesma linha de p
 %3 Objetivos: geral
 O objetivo geral deste trabalho é desenvolver um sistema capaz de classificar objetos metálicos e medir seu respectivo ângulo de rotação com relação ao eixo x do plano cartesiano, sendo os objetos previamente conhecidos pelo sistema utilizando-se técnicas de aprendizagem de máquina.
 
-Para tanto, tem-se como objetivos específicos três objetivos que possibilitarão o cumprimento do objetivo geral.
+Para tanto, pode-se estabelecer três objetivos específicos que possibilitarão o cumprimento do objetivo geral.
 O primeiro objetivo específico é a análise e aplicação de técnicas de segmentação de imagens, como algoritmos de
 detecção de bordas, algoritmos de limiarização, segmentação baseada em crescimento de regiões.
 O segundo objetivo é analisar e aplicar técnicas de descrição de imagens, como algoritmos de descrição de contornos, descrição de regiões, entre outros.
-O terceiro objetivo é o emprego de uma técnica de aprendizagem de máquina, como redes neurais, que possibilite a classificação de objetos previamente conhecidos pelo sistema.
+O terceiro objetivo é o emprego de uma técnica de aprendizagem de máquina, como redes neurais, que possibilite a classificação e determinação do ângulo de objetos previamente conhecidos pelo sistema.
 
 \section{Metodologia}
 
-O desenvolvimento do projeto é dividido em três etapas. A primeira etapa consiste no estudo de técnicas de segmentação de imagem e implementação no software Matlab. A segunda etapa consiste no estudo de técnicas de descrição de imagens e também implementação no Matlab. Finalmente, na terceira etapa é implementado no Matlab um sistema de redes neurais capazes de classificar o objeto e medir seu ângulo.
+O desenvolvimento do projeto é dividido em três etapas. A primeira etapa consiste no estudo de técnicas de segmentação de imagem e implementação no software MATLAB. A segunda etapa consiste no estudo de técnicas de descrição de imagens e também implementação no MATLAB. Finalmente, na terceira etapa é implementado no MATLAB um sistema de redes neurais capazes de classificar o objeto e medir seu ângulo.
 Para cada etapa do desenvolvimento do projeto adota-se a metodologia de desenvolvimento em espiral, onde a cada ciclo de desenvolvimento são agregadas novas funcionalidades ao sistema.
 
 Para o teste e a validação do sistema é desenvolvido um ambiente de testes, onde objetos especificamente selecionados são posicionados de forma automática, possibilitando a captura de imagens do objeto em diversas posições angulares. 
@@ -56,4 +56,4 @@ Para o teste e a validação do sistema é desenvolvido um ambiente de testes, onde
 
 Esta monografia está dividida em cinco capítulos: o primeiro corresponde à introdução, na qual são
 apresentadas a motivação, os objetivos e a metodologia empregada. O segundo capítulo contém a fundamentação
-teórica do projeto, ou seja, o estudo das técnicas e algoritmos utilizados durante o trabalho. Nesse capítulo são abordados técnicas de segmentação de imagens, de descrição e de classificação de imagens. O terceiro capítulo apresenta o desenvolvimento do projeto, detalhando cada parte do sistema desenvolvido. O quarto capítulo apresenta o ambiente de testes desenvolvido para validar o sistema, os testes efetuados e os resultados obtidos. Finalmente o quinto capítulo contém considerações finais sobre o projeto.
+teórica do projeto, ou seja, o estudo das técnicas e algoritmos utilizados durante o trabalho. Nesse capítulo são abordadas técnicas de segmentação de imagens, de descrição e de classificação de imagens. O terceiro capítulo apresenta o desenvolvimento do projeto, detalhando cada parte do sistema desenvolvido. O quarto capítulo apresenta o ambiente de testes desenvolvido para validar o sistema, os testes efetuados e os resultados obtidos. Finalmente o quinto capítulo contém considerações finais sobre o projeto.
